fixed layout issue and made the twilio interactin not such a nightmare

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -82,3 +82,9 @@ div {
 label {
   display: block;
 }
+
+
+.success-popup  {
+    transition: .3s ease all;
+    font-family: 'Roboto', sans-serif;
+}
